Added war and client-servlet targets in build.xml
git-svn-id: https://svn.apache.org/repos/asf/incubator/cxf/trunk@481170 13f79535-47bb-0310-9956-ffa450edef68